Redirect www to non-www

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,9 +6,9 @@
     RewriteEngine On
 
     # www redirected to domain without www
-    RewriteCond %{HTTP_HOST} !localhost
-    RewriteCond %{HTTP_HOST} !^(.+)\.(.+)\.(.+)
-    RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [L,R=301]
+    RewriteRule ^(.*)$ https://www.bookstrap.io [NC]
+    RewriteCond %{HTTP_HOST} ^bookstrap.io/$1 [L,R=301]
+
 
     # redirect old subdomain project to new domain
     RewriteCond %{HTTP_HOST} ^bookstrap.elvendelibros.com$
