--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "bkwld/cloner": "^3.9",
         "codedge/laravel-fpdf": "^1.6",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
