phppresentation version modified

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "phpoffice/phppresentation": "dev-master"
+        "phpoffice/phppresentation": "0.9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
